@@ -1,2 +1,3 @@
 - fill debian directory! :)
 - Tune Changelog file
+- setup control file for DEBIAN
